--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </tr>
         </table>
         <hr>
-        <a href="hobbies.html">My Hobbies</a>
-        <a href="contact.html">Contact me</a>
+        <a href="hobbies">My Hobbies</a>
+        <a href="contact">Contact me</a>
     </body>
 </html>
